--- a/java/tomcat9/tomcat9.yml
+++ b/java/tomcat9/tomcat9.yml
@@ -111,3 +111,11 @@
       group: tomcat
       mode: 0600
 
+  - name: Relax host-manager web restrictions
+    template:
+      src: host-manager.xml.j2
+      dest: /opt/tomcat9/conf/Catalina/localhost/host-manager.xml
+      owner: tomcat
+      group: tomcat
+      mode: 0600
+
