--- a/webserver/apache-php-1.yml
+++ b/webserver/apache-php-1.yml
@@ -52,7 +52,6 @@
         recurse: yes
         file_type: directory
       register: subdirs
-      tags: wip
 
     # Build loop based on registered result subdirs 
     - name: Add group write permissions /var/www/ and sticky in subdirs
@@ -61,4 +60,18 @@
         state: directory
         mode: '2775'
       loop: "{{ subdirs['files'] }}"
+
+    - name: Find /var/www/ all files
+      find:
+        paths: /var/www
+        recurse: yes
+        file_type: file
+      register: files
+
+    - name: Add group write permissions /var/www/ in files
+      file:
+        path: "{{ item['path'] }}" 
+        state: file
+        mode: '0664'
+      loop: "{{ files['files'] }}"
 
